--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "express": "^4.15.4",
     "express-session": "^1.15.5",
+    "lodash": "^4.17.4",
     "passport": "^0.4.0",
     "passport-spotify": "^0.3.1",
     "setlistfm-js": "^1.0.1",
