--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/asso1985/setlisttospotify#readme",
   "dependencies": {
+    "body-parser": "^1.18.0",
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
